feat: implement embedded enterprise knowledge engine